@@ -1,7 +1,15 @@
+set(PYTHON_BINDING_NAMESPACE "PyKDChart")
+set(PYSIDE_MAJOR_VERSION "2")
 
 find_package(Python3 3.6 REQUIRED COMPONENTS Interpreter Development)
-find_package(Shiboken2 REQUIRED)
-find_package(PySide2 ${Qt5Widgets_VERSION} EXACT REQUIRED)
-include(PySide2ModuleBuild)
+find_package(Shiboken${PYSIDE_MAJOR_VERSION} REQUIRED)
+find_package(PySide${PYSIDE_MAJOR_VERSION} ${Qt5Widgets_VERSION} EXACT REQUIRED)
 
+if (NOT ${PROJECT_NAME}_PYTHON_BINDINGS_INSTALL_PREFIX)
+  set(${PROJECT_NAME}_PYTHON_BINDINGS_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}")
+endif()
+set(BINDINGS_DIR "${INSTALL_LIBRARY_DIR}/python${Python3_VERSION_MAJOR}.${Python3_VERSION_MINOR}/site-packages/${PYTHON_BINDING_NAMESPACE}")
+set(${PROJECT_NAME}_PYTHON_BINDINGS_INSTALL_PREFIX "${${PROJECT_NAME}_PYTHON_BINDINGS_INSTALL_PREFIX}/${BINDINGS_DIR}")
+
+include(PySide2ModuleBuild)
 add_subdirectory(PyKDChart)
