@@ -5,7 +5,8 @@ Version 3.0.0 (unreleased):
 ---------------------------
  * Supports Qt6 in addition to Qt5
  * The qmake buildsystem (via autogen.py) is removed.
- * requires C++11
+ * Requires C++11
+ * The Python bindings installation path for "site-packages"
 
 Version 2.8.0 (unreleased):
 ---------------------------
